src/main/java/com/example/demo/entity/error/ProfileError.java
package com.example.demo.entity.error;

public enum ProfileError {
	PROFILE_CONSTRAINT_VIOLATION;
}
